--- a/MvcProjectWmp101/MvcProjectWmp101.csproj
+++ b/MvcProjectWmp101/MvcProjectWmp101.csproj
@@ -126,9 +126,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AddressesController.cs" />
     <Compile Include="Controllers\EfController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ModelController.cs" />
+    <Compile Include="Controllers\PersonsController.cs" />
     <Compile Include="Controllers\RazorController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Global.asax.cs">
@@ -145,6 +147,7 @@
     <Compile Include="Models\Students.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\indexViewModel.cs" />
+    <Compile Include="ViewModel\PerAddViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -184,6 +187,8 @@
     <Content Include="Views\Model\Index.cshtml" />
     <Content Include="Views\Ef\Index.cshtml" />
     <Content Include="Views\Student\Index.cshtml" />
+    <Content Include="Views\Persons\NewPerson.cshtml" />
+    <Content Include="Views\Addresses\NewAddress.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
